--- a/fronted/package.json
+++ b/fronted/package.json
@@ -31,6 +31,7 @@
     "react-hot-toast": "^2.5.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
+    "recharts": "^2.15.1",
     "shadcn-ui": "^0.9.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
