--- a/fronted/package.json
+++ b/fronted/package.json
@@ -16,13 +16,16 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.3",
     "@reduxjs/toolkit": "^2.5.1",
+    "@tailwindcss/oxide": "^4.0.6",
     "@tailwindcss/vite": "^4.0.3",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "framer-motion": "^12.4.3",
+    "lightningcss": "^1.29.1",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
@@ -38,6 +41,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@rollup/rollup-darwin-arm64": "^4.34.7",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
@@ -48,7 +52,8 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.1",
-    "tailwindcss": "^4.0.3",
+    "rollup": "^4.34.7",
+    "tailwindcss": "^4.0.6",
     "vite": "^6.1.0"
   }
 }
